force-app/main/default/objects/Student__c/fields/Admit_Card__c.field-meta.xml
<CustomField>
    <fullName>Admit_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admit Card</label>
    <type>Checkbox</type>
</CustomField>