force-app/main/default/objects/Student__c/fields/AnnualFee__c.field-meta.xml
<CustomField>
    <fullName>AnnualFee__c</fullName>
    <label>AnnualFee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>