force-app/main/default/objects/Student__c/fields/BranchCode__c.field-meta.xml
<CustomField>
    <fullName>BranchCode__c</fullName>
    <label>BranchCode</label>
    <length>25</length>
    <type>Text</type>
</CustomField>