force-app/main/default/objects/Student__c/fields/LeaveTaken__c.field-meta.xml
<CustomField>
    <fullName>LeaveTaken__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LeaveTaken</label>
    <type>Checkbox</type>
</CustomField>