force-app/main/default/objects/Student__c/fields/NumberOfStudents__c.field-meta.xml
<CustomField>
    <fullName>NumberOfStudents__c</fullName>
    <label>NumberOfStudents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>