force-app/main/default/objects/Student__c/fields/NumberofSubjects__c.field-meta.xml
<CustomField>
    <fullName>NumberofSubjects__c</fullName>
    <label>NumberofSubjects</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>