force-app/main/default/objects/Student__c/fields/PrimarySubject__c.field-meta.xml
<CustomField>
    <fullName>PrimarySubject__c</fullName>
    <label>PrimarySubject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NOne</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>