force-app/main/default/objects/Student__c/fields/School_Description__c.field-meta.xml
<CustomField>
    <fullName>School_Description__c</fullName>
    <label>School`Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>