force-app/main/default/objects/Student__c/fields/SchoolName__c.field-meta.xml
<CustomField>
    <fullName>SchoolName__c</fullName>
    <label>SchoolName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>