force-app/main/default/objects/Student__c/fields/SchoolWebsite__c.field-meta.xml
<CustomField>
    <fullName>SchoolWebsite__c</fullName>
    <label>SchoolWebsite</label>
    <type>Url</type>
</CustomField>