force-app/main/default/objects/Student__c/fields/Stu_Detail__c.field-meta.xml
<CustomField>
    <fullName>Stu_Detail__c</fullName>
    <label>Stu-Detail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>