force-app/main/default/objects/Student__c/fields/Stu_Num__c.field-meta.xml
<CustomField>
    <fullName>Stu_Num__c</fullName>
    <displayFormat>A-{00}</displayFormat>
    <label>Stu-Num</label>
    <type>AutoNumber</type>
</CustomField>