force-app/main/default/objects/Student__c/fields/StuD_T__c.field-meta.xml
<CustomField>
    <fullName>StuD_T__c</fullName>
    <label>StuD&amp;T</label>
    <type>DateTime</type>
</CustomField>