force-app/main/default/objects/Student__c/fields/StudentDetail__c.field-meta.xml
<CustomField>
    <fullName>StudentDetail__c</fullName>
    <label>StudentDetail</label>
    <type>TextArea</type>
</CustomField>