force-app/main/default/objects/Student__c/fields/StudentPhone__c.field-meta.xml
<CustomField>
    <fullName>StudentPhone__c</fullName>
    <label>StudentPhone</label>
    <type>Phone</type>
</CustomField>